network/CreateVPC_PublicSubnet.yaml
Resources:
    ## As of Mar 2026, Public address can only be assigned via CloudFormation script if DeviceIndex = 0 & we are creating a new Network interface (VPC and PublicSubnet)
    TrimDiceVPC:
        Type: AWS::EC2::VPC
        Properties:
          CidrBlock: 10.0.0.0/16
          EnableDnsSupport: 'true'
          EnableDnsHostnames: 'true'
          Tags:
          - Key: Name
            Value: TrimDiceVPC
    TrimDicePublicSubnet:
        Type: AWS::EC2::Subnet
        Properties:
          VpcId: !Ref TrimDiceVPC
          CidrBlock: 10.0.0.0/24
          AvailabilityZone: 'ap-south-1a'
          Tags:
          - Key: Name
            Value: TrimDicePubSubnet
    
    # Defined a security group having allowing all EGress and only SSH (Port 22) and ICMP (Port 8) Ingress
    TrimDicePublicSG:
        Type: AWS::EC2::SecurityGroup
        Properties:
          VpcId: !Ref TrimDiceVPC
          GroupName: TrimDicePublicSG
          GroupDescription: "Security group to associate with TrimDicePublicSubnet"
          SecurityGroupEgress:
            - IpProtocol: -1
              CidrIp: "0.0.0.0/0"
          SecurityGroupIngress:
            - IpProtocol: tcp
              FromPort: 22
              ToPort: 22
              CidrIp: "0.0.0.0/0"
            - IpProtocol: icmp
              FromPort: 8
              ToPort: -1
              CidrIp: "0.0.0.0/0"
            - IpProtocol: nfs
              FromPort: 0
              ToPort: 2049
              SourceSecurityGroupId: TrimDicePublicSG
                

    # TrimDicePublicSGVPCAssociate:
    #     Type: AWS::EC2::SecurityGroupVpcAssociation
    #     Properties:
    #       VpcId: !Ref TrimDiceVPC
    #       GroupId: !Ref TrimDicePublicSG

    # Attached Internet gateway for Internet access
    TDIGW:
        Type: AWS::EC2::InternetGateway
        Properties:
          Tags:
          - Key: Name
            Value: TrimDiceIGW 
    # Doc Reference: https://docs.aws.amazon.com/AWSCloudFormation/latest/TemplateReference/aws-resource-ec2-vpcgatewayattachment.html#aws-resource-ec2-vpcgatewayattachment--examples
    TDVPCGWAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
          VpcId:
            Ref: TrimDiceVPC
          InternetGatewayId:
            Ref: TDIGW
    
    # ClaudeAI helped - Add IGW route
    TrimDiceRoute:
        Type: AWS::EC2::Route
        DependsOn: TDVPCGWAttachment
        Properties:
          RouteTableId: !Ref TrimDiceRouteTable
          DestinationCidrBlock: "0.0.0.0/0"
          GatewayId: !Ref TDIGW
    TrimDiceRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
          VpcId: !Ref TrimDiceVPC
          Tags:
          - Key: Name
            Value: TrimDiceRouteTable
    # Associate route table with subnet
    TrimDiceSubnetRTAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          SubnetId: !Ref TrimDicePublicSubnet
          RouteTableId: !Ref TrimDiceRouteTable
            
Outputs:
  VpcId:
    Value: !Ref TrimDiceVPC
    Export:
      Name: TrimDice-VpcId
  SubnetId:
    Value: !Ref TrimDicePublicSubnet
    Export:
      Name: TrimDice-SubnetId 
  SGId:
    Value: !Ref TrimDicePublicSG
    Export:
      Name: TrimDice-SGId
